# junkstop-shame-cycle

./: .env  .gitignore  .replit  API_DOCUMENTATION.md  DEMO_SCRIPT.md  DEPLOYMENT.md  GAMIFICATION_AI_TESTING_GUIDE.md  GAMIFICATION_TESTING.md  PROJECT_STATUS.md  QUICK_DEMO_SETUP.md  README.md  dev.py  dev_start.py  fastapi_backend.py  index.html  index.js  mobile-dev-workflow.md  package-lock.json  package.json  pyproject.toml  replit.md  requirements.txt  run_backend.py  simple_fastapi.py  start_backend.py  start_backend.sh  start_dev.py  start_fastapi.py  start_fastapi_server.py  test_gamification.py
.cursor/: mcp.json
JunkStopApp/: app.json  package.json
apps/backend/: ai_coach.py  auth.py  database.py  gamification.py  (+6 more)
attached_assets/: Pasted--Junk-Food-Accountability-App-Build-Prompt-App-Concept-Build-a-mobile-first-web-app-called-J-1750485153657_1750485153659.txt  Pasted-Here-s-the-final-update-to-your-prompt-now-tailored-for-React-Native-Expo-transitioning-1750440901753_1750440901753.txt  Pasted-Here-s-your-updated-and-final-Replit-prompt-for-building-the-JunkStop-MVP-now-including-optio-1750440646883_1750440646886.txt
backend/: ai_coach.py  database.py  main.py  models.py  storage.py
landing-page/: package-lock.json  package.json
mobile/: .env.example  AI_SETUP.md  App.tsx  LIVEKIT_SETUP.md  README.md  app.config.js  app.json  deployment-guide.md  feature-verification.md  metro.config.js  package-lock.json  package.json  production-mvp-guide.md  tsconfig.json
server/: routes.ts  schema.ts  storage.ts
shared/: schema.ts
src/: App.tsx  index.css
(+71 files in other folders)
